feat!:add appId partitioning

--- a/packages/test-app/index.html
+++ b/packages/test-app/index.html
@@ -312,6 +312,10 @@
         <div class="card">
           <h2>Server Evaluation</h2>
           <div class="form-group">
+            <label for="appIdInput">App ID</label>
+            <input type="text" id="appIdInput" placeholder="e.g., app-123" value="test-app-1">
+          </div>
+          <div class="form-group">
             <label for="userIdInput">User ID</label>
             <input type="text" id="userIdInput" placeholder="e.g., user-123" value="test-user-1">
           </div>
